Start machine learning study
Add ml directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .vscode
-toy_project/calendar/__pycache__
-toy_project/calendar/Include
-toy_project/calendar/Scripts
-toy_project/calendar/Lib
-toy_project/calendar/pyvenv.cfg
+__pycache__
+Include
+Scripts
+Lib
+pyvenv.cfg
